button toggle face addition

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Minesweeper</title>
 </head>
 <body>
-    <h1>MINESWEEPER</h1>
+    <nav id="highscore">
+    	<input type="image" onclick="restart()" id="happy-face" src="happyface.jpg"/>
+    </nav>	
     <div id="field"></div>
     <script src="main.js"></script>
 </body>
