show bombs and timer

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Minesweeper</title>
 </head>
 <body>
-    <nav id="highscore">
-    	<input type="image" onclick="restart()" id="happy-face" src="happyface.jpg"/>
-    </nav>	
-    <div id="field"></div>
+    <div id="main">
+    	<div id="header">
+    		<span id="timer" class="info-window">0</span>
+	    	<input type="image" onclick="restart()" id="happy-face" src="./img/happyface.jpg"/>
+	    	<span id="bombs-counter" class="info-window"></span>
+    	</div>	
+    	<div id="field"></div>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
