--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <title>Minesweeper</title>
 </head>
 <body>
     <div id="main"></div>   
-    <script src="libs/store.js/dist/store.everything.min.js"></script> <!-- import one of the libraries -->
+    <script src="libs/store.js/store.everything.min.js"></script> <!-- import one of the libraries -->
     <script type="text/javascript" src="./src/user.js"></script>
     <script type="text/javascript" src="./src/cell.js"></script>
     <script type="text/javascript" src="./src/grid.js"></script>
