--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="main"></div>   
-    <script src="libs/store/store.everything.min.js"></script> <!-- import one of the libraries -->
+    <script src="./libs/store/store.everything.min.js"></script> <!-- import one of the libraries -->
     <script type="text/javascript" src="./src/user.js"></script>
     <script type="text/javascript" src="./src/cell.js"></script>
     <script type="text/javascript" src="./src/grid.js"></script>
